--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Fetch PaperMod
         run: |
           rm -rf themes/PaperMod
-          git clone --depth=1 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
+          git clone --depth=1 --branch v7 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: "0.125.0"
+          hugo-version: "0.146.0"
           extended: true
 
       - name: Build
