--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Fetch PaperMod
         run: |
           rm -rf themes/PaperMod
-          git clone --depth=1 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
+          git clone --depth=1 --branch v8.0 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
@@ -52,4 +52,5 @@ jobs:
     steps:
       - name: Deploy
         uses: actions/deploy-pages@v4
+
 
