--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,11 +21,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Fetch PaperMod theme (no local setup, no submodule needed)
-      - name: Fetch PaperMod
+      # Fetch PaperMod theme (pin to tag v8.0)
+      - name: Fetch PaperMod (tag v8.0)
         run: |
           rm -rf themes/PaperMod
-          git clone --depth=1 --branch v8.0 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
+          git clone https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
+          cd themes/PaperMod
+          git checkout tags/v8.0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
@@ -52,5 +54,3 @@ jobs:
     steps:
       - name: Deploy
         uses: actions/deploy-pages@v4
-
-
