--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,13 +21,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Fetch PaperMod theme (pin to tag v8.0)
-      - name: Fetch PaperMod (tag v8.0)
+      # Fetch PaperMod theme (no local setup, no submodule needed)
+      - name: Fetch PaperMod
         run: |
           rm -rf themes/PaperMod
-          git clone https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
-          cd themes/PaperMod
-          git checkout tags/v8.0
+          git clone --depth=1 https://github.com/adityatelange/hugo-PaperMod themes/PaperMod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
