fix domain and hide home name

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,5 @@
-baseURL: "https://junjieim.github.io/"
+baseURL: "https://junjie.im"
+canonifyURLs: true
 languageCode: "zh-cn"
 title: "Junjie.im"
 theme: ["PaperMod"]
